2018-09-02  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvi.c: Experimental support for XeTeX transparency font feature.
	* cid.c, cid_p.h, cidtype0.c, cmap.[ch], cmap_p.h, fontmap.[ch],
	pdfdev.c, pdffont.c, tt_cmap.[ch], type0.c:
	Removed reverse CMap mappings. Do not use cff charset data
	directly in pdfdev. Using reverse CMap for ToUnicode creation
	causes problems since input CMap can not be assumed to be
	always Unicode. Also, current implementation is imcomplete.
	* configure.ac: Version 20180902.

2018-08-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* otl_conf.[ch]: Removed. This undocumented feature is no
	longer used.
	* Makefile.am: Update for otl_conf.[ch] removal.

2018-08-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* jpegimage.c: Do not write application specific markers which
	are not necessary for displaying images.
	* pdfencrypt.c: Set a compatibility flag bit for PDF 2.0.
	* spc_pdfm.c: Fixed a bug that string objects are not handled
	properly in pdf:stream special. Additional dictionay keys can
	be specified for tounicode conversion.
	* configure.ac: Version 20180827.

2018-08-23  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* type1.c: Add glyph names of component glyphs used by seac
	operator to CharSet string.
	* configure.ac: Version 20180823.

2018-08-21  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c: Fix for "infinite loop" detection. Now handles the
	case of circular reference properly.
	* pdfencrypt.c: Fixed bug that key size is not adjusted
	correctly.
	* configure.ac: Version 20180821.

2018-08-18  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cidtype2.c: Workaround for CIDSet issue. All glyphs
	including component glyphs and dummy glyphs except .notdef
	should be listed in CIDSet.

2018-08-17  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* cmap_write.c, tt_cmap.[ch], type0.c: Fixed a bug that
	CMapName in CMap resource is not properly written.